# core

./: .gitignore  CMakeLists.txt  CMakePresets.json  ChangeLog.md  README.md
cmake/: profiler.cmake
doc/: environment-variables.md  etcd-namespace-entries.md  license.md  metrics.md
docker/: Dockerfile.cluster  docker-compose.yaml
runtime/: cluster.sh
scripts/: reset-db.sh.in  start.sh.in
src/common/telemetry/: CMakeLists.txt  log.cpp  log.h  metrics.cpp  metrics.h  otel_log_sink.cpp  otel_log_sink.h
src/common/telemetry/trace/: trace.cpp  trace.h  trace_asio.cpp  trace_asio.h  trace_context.h
src/common/telemetry/trace/impl/: bridge.h
src/entrypoint/: CMakeLists.txt  command_factory.cpp  command_factory.h  config.h  constant.h  directory.cpp  directory.h  formats.cpp  formats.h  garbage_collector.cpp  garbage_collector.h  handler.cpp  handler.h  limits.cpp  limits.h  multipart_state.cpp  multipart_state.h  object.cpp  object.h  service.cpp  service.h  utils.cpp  utils.h
src/entrypoint/aws/: arn.cpp  arn.h
src/entrypoint/commands/: command.h
src/entrypoint/commands/iam/: create_access_key.cpp  create_access_key.h  create_user.cpp  create_user.h  delete_access_key.cpp  delete_access_key.h  delete_user.cpp  delete_user.h  delete_user_policy.cpp  delete_user_policy.h  get_user_policy.cpp  get_user_policy.h  list_user_policies.cpp  list_user_policies.h  put_user_policy.cpp  put_user_policy.h
src/entrypoint/commands/s3/: abort_multipart.cpp  abort_multipart.h  complete_multipart.cpp  complete_multipart.h  copy_object.cpp  copy_object.h  create_bucket.cpp  create_bucket.h  delete_bucket.cpp  delete_bucket.h  delete_bucket_cors.cpp  delete_bucket_cors.h  delete_bucket_policy.cpp  delete_bucket_policy.h  delete_object.cpp  delete_object.h  delete_objects.cpp  delete_objects.h  get_bucket_cors.cpp  get_bucket_cors.h  get_bucket_policy.cpp  get_bucket_policy.h  get_bucket_versioning.cpp  get_bucket_versioning.h  get_object.cpp  get_object.h  head_bucket.cpp  head_bucket.h  head_object.cpp  head_object.h  init_multipart.cpp  init_multipart.h  list_buckets.cpp  list_buckets.h  list_multipart.cpp  list_multipart.h  list_object_versions.cpp  list_object_versions.h  list_objects.cpp  list_objects.h  (+12 more)
src/entrypoint/commands/vrm/: get_license_info.cpp  get_license_info.h  get_metrics.cpp  get_metrics.h  get_ready.cpp  get_ready.h
src/entrypoint/cors/: config.h  info.h  module.cpp  module.h  parser.cpp  parser.h
src/entrypoint/http/: aws4_hmac_sha256.cpp  aws4_hmac_sha256.h  basic_auth.cpp  basic_auth.h  body.h  chunk_body_sha256.cpp  chunk_body_sha256.h  chunked_body.cpp  chunked_body.h  command_exception.cpp  command_exception.h  no_auth.cpp  no_auth.h  range.cpp  range.h  raw_body.cpp  raw_body.h  raw_body_sha256.cpp  raw_body_sha256.h  raw_request.cpp  raw_request.h  request.cpp  request.h  request_factory.cpp  request_factory.h  response.cpp  response.h  stream.cpp  stream.h  string_body.cpp  string_body.h
src/entrypoint/policy/: effect.h  matcher.h  matchers.h  module.cpp  module.h  parser.cpp  parser.h  policy.cpp  policy.h  variables.cpp  variables.h
src/entrypoint/user/: db.cpp  db.h  user.h
src/pch/: CMakeLists.txt
src/storage/: CMakeLists.txt  config.h  data_file.cpp  data_file.h  default_data_store.cpp  default_data_store.h  handler.cpp  handler.h  reference_counter.cpp  reference_counter.h  service.h
src/storage/global/: cache.cpp  cache.h  config.h  data_view.cpp  data_view.h
src/storage/group/: config.cpp  config.h  ec_data_view.cpp  ec_data_view.h  ec_maintainer.h  externals.h  internals.h  repairer.h  rr_data_view.cpp  rr_data_view.h  state.h  storage_state_manager.h
src/storage/group/impl/: address_utils.cpp  address_utils.h  prefix.h
src/storage/interfaces/: data_store.h  data_view.h  local_storage.h  remote_storage.cpp  remote_storage.h
test/: CMakeLists.txt  test_config.h.in
test/benchmark/: CMakeLists.txt  benchmark_local_storage.cpp  profile_deduplicator.cpp  profile_ec_write.cpp
test/feature/: hadoop_s3a_skip.txt  run_hadoop_test.sh  run_test.sh  s3tests_skip.txt
test/integration/: CMakeLists.txt  test_async_http_client_with_https.cpp  test_awaitable_promise.cpp  test_coordinator.cpp  test_data_store.cpp  test_ec.cpp  test_ec_data_view.cpp  test_ec_maintainer.cpp  test_etcd_manager.cpp  test_etcd_manager_on_client_failure.cpp  test_etcd_sync_client.cpp  test_fragment_set.cpp  test_gdv_fixture.cpp  test_global_data_view.cpp  test_license_updater_watcher.cpp  test_lru_cache.cpp  test_mock_data_store.cpp  test_reference_counter.cpp  test_service.cpp  test_service_discovery.cpp  test_storage_outage.cpp  test_storage_state_manager.cpp  test_subscriber.cpp
test/lib/mock/entrypoint/: CMakeLists.txt  entrypoint.cpp  entrypoint.h
test/lib/mock/storage/: CMakeLists.txt  mock_data_store.cpp  mock_data_store.h  mock_data_view.cpp  mock_data_view.h
test/lib/util/: CMakeLists.txt  coroutine.h  dedupe_fixture.h  gdv_fixture.h  gdv_fixture_using_process.h  proxy_cache_config.h  random.cpp  random.h  server.cpp  server.h  storage_fixture.h  temp_directory.cpp  temp_directory.h
test/performance/: CMakeLists.txt  run_perf_test.py
test/unit/: CMakeLists.txt  test_address.cpp  test_async_http_client.cpp  test_backend_client.cpp  test_beast.cpp  test_cors.cpp  test_data_file.cpp  test_deduplicator.cpp  test_deletion_queue.cpp  test_disk_cache_body.cpp  test_disk_cache_manager.cpp  test_exp_backoff.cpp  test_formats.cpp  test_hash.cpp  test_http_client.cpp  test_http_range.cpp  test_integral.cpp  test_lfu_cache.cpp  test_license.cpp  test_namespace.cpp  test_opentelemetry.cpp  test_plain_cache.cpp  test_pointer_traits.cpp  test_policies.cpp  test_policies_with_action.cpp  test_policies_with_condition.cpp  test_policies_with_examples.cpp  test_policy_parser.cpp  test_pool.cpp  test_promise_future.cpp  test_proxy_cache.cpp  test_scoped_buffer.cpp  test_service_registry.cpp  test_signals.cpp  test_storage_group_config.cpp  test_storage_group_externals.cpp  test_storage_group_internals.cpp  test_strings.cpp  test_task.cpp  test_trace_asio.cpp  (+2 more)
(+220 files in other folders)
