# Copyright 2026 UltiHash Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

add_subdirectory(interfaces)
add_subdirectory(group)
add_subdirectory(global)

add_library(storage
            handler.cpp
            interfaces/remote_storage.cpp
            data_file.cpp
            default_data_store.cpp)

target_link_libraries(storage group_data global_data utils types etcd license storage_interfaces)
